--- a/apps/sample-web/.env
+++ b/apps/sample-web/.env
@@ -1,2 +1,2 @@
-REACT_APP_CHIME_SDK_MEETING_URL = 'https://meeting.example.com'
-REACT_APP_CHIME_SDK_MEETING_TOKEN = '12345678-1234-1234-1234-123456789012'
+REACT_APP_CHIME_SDK_MEETING_URL = 'https://react-chime-sdk.awsome.my.id'
+REACT_APP_CHIME_SDK_MEETING_TOKEN = '5966969f-9c76-4b29-9f36-4c6a94d026e0'
